@@ -1,3 +1,6 @@
+=== 2017-01-26
+* Enhancements
+  * Added array methods to section collections
 === 2017-01-25
 * Enhancements
   * Added list_items method to UnorderedList to get an array of children.
